# lepidex-backend

./: .gitignore  Dockerfile  README.md  butterfly_v1.keras  main.py  pyproject.toml
dependency_injection/: __init__.py  lepidex_di.py
repositories/: Dockerfile  __init__.py  lepidex.py
routers/: __init__.py  lepidex_router.py
schemas/: __init__.py  butterfly_schema.py
